force-app/main/default/objects/Milestone1_Nag__c/Milestone1_Nag__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - This is a nag object. Allows the Nag Engine to execute against objects.</description>
    <label>Nag</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>NAG-{00000}</displayFormat>
        <label>Project Nag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>