force-app/main/default/objects/Milestone1_Nag__c/fields/Assigned_To_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Running_User__c</fullName>
    <formula>IF( Assigned_To__c =  $User.Id ,&quot;YES&quot;,&quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Running User</label>
    <type>Text</type>
</CustomField>