force-app/main/default/objects/Milestone1_Nag__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, Project__r.Deadline__c,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__r.Deadline__c,
IF( Project_Task__c &lt;&gt; null, Project_Task__r.Due_Date__c,Today())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>