force-app/main/default/objects/Milestone1_Nag__c/fields/Nag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Nag_Reason__c</fullName>
    <label>Nag Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>