force-app/main/default/objects/Milestone1_Nag__c/fields/Nag_Status__c.field-meta.xml
<CustomField>
    <fullName>Nag_Status__c</fullName>
    <label>Nag Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>