force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, Project__c,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__c,
IF( Project_Task__c &lt;&gt; null, Project_Task__c,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>