force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, Project__r.Name,
IF( Project_Milestone__c &lt;&gt; null, Project_Milestone__r.Name,
IF( Project_Task__c &lt;&gt; null, Project_Task__r.Name,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>