force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Owner_Id__c</fullName>
    <description>Bring down the Owner of the Parent Record. Check Project, then Milestone, then Task. Validation rules only allow us to have one Parent Lookup from those three lookups.</description>
    <formula>IF( Project__c &lt;&gt; null, Project__r.OwnerId,
IF( Project_Milestone__c &lt;&gt; null,  Project_Milestone__r.OwnerId, 
IF( Project_Task__c &lt;&gt; null, Project_Task__r.OwnerId__c,null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Owner Id</label>
    <type>Text</type>
</CustomField>