force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status__c</fullName>
    <formula>IF( Project_Milestone__c  &lt;&gt; null,  IF(Project_Milestone__r.Complete__c,&apos;True&apos;,&apos;False&apos;),
     IF( Project_Task__c &lt;&gt; null, IF(Project_Milestone__r.Complete__c,&apos;True&apos;,&apos;False&apos;),&apos;false&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Complete Status</label>
    <type>Text</type>
</CustomField>