force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, &apos;Project&apos;,
IF( Project_Milestone__c &lt;&gt; null, &apos;Milestone&apos;,
IF( Project_Task__c &lt;&gt; null, &apos;Task&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Type</label>
    <type>Text</type>
</CustomField>