force-app/main/default/objects/Milestone1_Nag__c/fields/Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Milestone</label>
    <referenceTo>Milestone1_Milestone__c</referenceTo>
    <relationshipName>Project_Nags</relationshipName>
    <type>Lookup</type>
</CustomField>