force-app/main/default/objects/Milestone1_Nag__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipName>Project_Nags</relationshipName>
    <type>Lookup</type>
</CustomField>