force-app/main/default/objects/Milestone1_Nag__c/validationRules/Must_have_a_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_a_parent</fullName>
    <active>true</active>
    <errorConditionFormula>Project__c == null &amp;&amp; Project_Milestone__c == null &amp;&amp; Project_Task__c == null</errorConditionFormula>
    <errorMessage>There must be one parent record selected.</errorMessage>
</ValidationRule>