force-app/main/default/objects/Milestone1_Nag__c/validationRules/Only_one_parent_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_parent_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>(Project__c != null &amp;&amp; (Project_Milestone__c != null || Project_Task__c != null)) ||
(Project_Milestone__c != null &amp;&amp; (Project__c != null || Project_Task__c != null)) ||
(Project_Task__c != null &amp;&amp; (Project_Milestone__c != null || Project__c != null))</errorConditionFormula>
    <errorMessage>Only one parent object is currently allowed. For example, If Project is set as the lookup, then Milestone and Task must be empty.</errorMessage>
</ValidationRule>